# MPNA_Framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: algorithms.h  fillers.h  lib_matrices.h  matrix.h  mpi_wrapper.h  solver.h  vector.h
include/Algorithms/: linear_algebra.h  solver.h
include/Algorithms/Linear_Algebra/: dgemv.h
include/Algorithms/Solvers/: GMRES.h  conjugate_gradient.h  gauss_seidel.h  jacobi.h  power_iteration.h
include/Fillers/: matrix_market_loader.h  poisson_laplacian_2D.h
include/MPI/: coo_MPI.h  spmv_MPI.h  vector_MPI.h
include/Matrices/: coo.h  csc.h  csr.h  general.h  inter_format.h  matrices_utils.h
include/Solvers/: GMRES.h  conjugate_gradient.h  gauss_seidel.h  jacobi.h
include/Utils/: chrono.h  types.h
include/Vector/: vector.h
include/Vectors/: vectors.h
src/: CMakeLists.txt  main.c
src/Algorithms/Linear_Algebra/: dgemv.c
src/Algorithms/Solvers/: GMRES.c  conjugate_gradient.c  gauss_seidel.c  jacobi.c  power_iteration.c
src/Fillers/: matrix_market_loader.c  poisson_laplacian_2D.c
src/MPI/: coo_MPI.c  spmv_MPI.c  vector_MPI.c
src/Matrices/: coo.c  csc.c  csr.c  general.c  inter_format.c
src/Solvers/: GMRES.c  conjugate_gradient.c  gauss_seidel.c  jacobi.c
src/Utils/: chrono.c
src/Vector/: vector.c
src/Vectors/: vectors.c
test/: CMakeLists.txt  inter_format_test.c  inter_format_test.h  main.c  test_utils.c  test_utils.h
test/Matrices/: inter_format_test.c  inter_format_test.h
test/Solvers/: solver_test.c  solver_test.h
test/Vectors/: vector_test.c  vector_test.h
